added cross-val tutorial

--- a/tutorial/Tutorial 3.  Cross-Validation.ipynb
+++ b/tutorial/Tutorial 3.  Cross-Validation.ipynb
@@ -22,7 +22,7 @@
       "\n",
       "Because we have only a single experiment here, the first approach is not appropriate.  The second approach is also challenging because we have only approximate knowledge about the uncertainties, which we modelled as the RMS error found when fitting the Karplus equation.  We are thus left with the third approach.\n",
       "\n",
-      "To cross-validate the simulation data, we must first divide the data into a sequence of training and test sets.  The key idea is that a model will be fit on the training data, but evaluated on the test set.  We choose `regularization_strength` to maximize the ($\\chi^2$) performance on the test data.  In this way, we prevent overfitting and ensure that our model *generalizes* to arbitrary simulation datasets.  \n",
+      "To cross-validate using the simulation data, we must first divide the data into a list of training and test sets.  The key idea is that a model will be fit on the training data, but evaluated on the test set.  We choose `regularization_strength` to maximize the ($\\chi^2$) performance on the test data.  In this way, we prevent overfitting and ensure that our model *generalizes* to arbitrary simulation datasets.  \n",
       "\n",
       "To begin, we perform the same setup as previously:"
      ]
@@ -67,6 +67,13 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We're ready to do the cross-validation.  We will use a grid search, where we build models using multiple values of `regularization_strength`.  When the calculations have finished, the results will be displayed in tabular form.  "
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -77,6 +84,14 @@
       "    all_test_chi[k] = test_chi.mean()\n",
       "pandas.DataFrame([all_test_chi], columns=regularization_strength_list, index=\"$\\chi^2$\")"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
