--- a/tutorial/Tutorial 4.  Input and Output.ipynb
+++ b/tutorial/Tutorial 4.  Input and Output.ipynb
@@ -10,41 +10,93 @@
     {
      "cell_type": "markdown",
      "metadata": {},
-     "source": "File Input and Output\n=====================\n\nIn this tutorial, we discuss saving an LVBP model to disk for later use.  We repeat the same calculations as in the previous tutorials, but this time save the model to disk for later use.  \n\n"
+     "source": [
+      "File Input and Output\n",
+      "=====================\n",
+      "\n",
+      "In this tutorial, we discuss saving an LVBP model to disk for later use.  We repeat the same calculations as in the previous tutorials, but this time save the model to disk for later use.  \n",
+      "\n"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "import numpy as np\nimport pandas\nimport pymc \nimport matplotlib.pyplot as plt\nfrom fit_ensemble import lvbp, example_loader\n\nmeasurements, predictions, uncertainties = example_loader.load_alanine()\nphi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n\nnum_samples = 25000  # Generate 25,000 MCMC samples\nthin = 25  # Subsample (i.e. thin) the MCMC traces by 25X to ensure independent samples\nburn = 5000  # Discard the first 5000 samples as \"burn-in\"\n\nregularization_strength = 3.0  # How strongly do we prefer a \"uniform\" ensemble (the \"raw\" MD)? ",
+     "input": [
+      "import numpy as np\n",
+      "import matplotlib.pyplot as plt\n",
+      "from fit_ensemble import lvbp, example_loader\n",
+      "\n",
+      "measurements, predictions, uncertainties = example_loader.load_alanine()\n",
+      "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
+      "\n",
+      "num_samples = 25000  # Generate 25,000 MCMC samples\n",
+      "thin = 25  # Subsample (i.e. thin) the MCMC traces by 25X to ensure independent samples\n",
+      "burn = 5000  # Discard the first 5000 samples as \"burn-in\"\n",
+      "\n",
+      "regularization_strength = 3.0  # How strongly do we prefer a \"uniform\" ensemble (the \"raw\" MD)? "
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {},
-     "source": "The following code builds a model, just like before.  However, we now pass a filename argument when we begin the MCMC sampling.  This tells PyMC to save the results to disk as an HDF5 database.  This is useful for situations where the entire MCMC trace cannot fit in system memory.  "
+     "source": [
+      "The following code builds a model, just like before.  However, we now pass a filename argument when we begin the MCMC sampling.  This tells PyMC to save the results to disk as an HDF5 database.  This is useful for situations where the entire MCMC trace cannot fit in system memory.  "
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "lvbp_model = lvbp.MaxEnt_LVBP(predictions, measurements, uncertainties, regularization_strength)\n\npymc_filename = \"trialanine.h5\"\nlvbp_model.sample(num_samples, thin=thin, burn=burn,filename=pymc_filename)",
+     "input": [
+      "lvbp_model = lvbp.MaxEnt_LVBP(predictions, measurements, uncertainties, regularization_strength)\n",
+      "\n",
+      "pymc_filename = \"trialanine.h5\"\n",
+      "lvbp_model.sample(num_samples, thin=thin, burn=burn,filename=pymc_filename)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": " \r[**                5%                  ]  1300 of 25000 complete"
-      }
-     ],
-     "prompt_number": "*"
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The HDF5 database file trialanine.h5 contains all components necessary to work with your LVBP model.  This includes\n",
+      "\n",
+      "* `predictions`\n",
+      "* `measurements`\n",
+      "* `uncertainties`\n",
+      "* The MCMC trace\n",
+      "\n",
+      "To load an HDF5 file from disk, use the load() function:"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "",
+     "input": [
+      "lvbp_model = lvbp.MaxEnt_LVBP.load(\"./trialanine.h5\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As we did previously, this model can be used to calculate the MAP conformational populations (`p`) or a trace (`state_pops_trace`) of an arbitrary observable:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "p = lvbp_model.accumulate_populations()\n",
+      "state_pops_trace = lvbp_model.trace_observable(indicators.T)"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
