--- a/tutorial/Tutorial2.ipynb
+++ b/tutorial/Tutorial2.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Tutorial 2. Tracing Random Variables"
+  "name": "Tutorial2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,12 +45,32 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " \r",
+        "[****************100%******************]  25000 of 25000 complete"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Trace Observable\n",
+      "----------------\n",
+      "\n",
       "Now we run the new code that outputs the trace of an additional \"observable\".  We simply call `lvbp_model.trace_observable()`.  This function takes a numpy array as input; here we input the transpose of the matrix of state indicators.  \n",
       "\n",
       "Thus, for each conformational ensemble in our MCMC trace, we calculate the population of the four torsional states:"
@@ -64,12 +84,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Estimate Average Properties\n",
+      "---------------------------\n",
+      "\n",
       "We have calculated a trace of the state populations for each conformational ensemble in the MCMC chain.  We first characterize the average (over all MCMC samples) state populations.  We also look at the state populations of the raw MD simulation."
      ]
     },
@@ -82,13 +106,14 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We would like to view the conformational populations as a table.  We use the pandas library to construct an object for a tabular view of the populations:"
+      "We would like to view the conformational populations as a table.  We use the pandas library to construct a tabular view of the populations:"
      ]
     },
     {
@@ -99,12 +124,57 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>$PP_{II}$</th>\n",
+        "      <th>$\\beta$</th>\n",
+        "      <th>$\\alpha_r$</th>\n",
+        "      <th>$\\alpha_l$</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Raw (MD)</th>\n",
+        "      <td> 0.438570</td>\n",
+        "      <td> 0.509385</td>\n",
+        "      <td> 0.049371</td>\n",
+        "      <td> 0.002673</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>LVBP</th>\n",
+        "      <td> 0.563336</td>\n",
+        "      <td> 0.382900</td>\n",
+        "      <td> 0.051017</td>\n",
+        "      <td> 0.002747</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "          $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
+        "Raw (MD)   0.438570  0.509385    0.049371    0.002673\n",
+        "LVBP       0.563336  0.382900    0.051017    0.002747"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Estimate Uncertainties\n",
+      "----------------------\n",
+      "\n",
       "It is also useful to look at the uncertainties associated with each of the state populations:"
      ]
     },
@@ -117,7 +187,41 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>$PP_{II}$</th>\n",
+        "      <th>$\\beta$</th>\n",
+        "      <th>$\\alpha_r$</th>\n",
+        "      <th>$\\alpha_l$</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>LVBP</th>\n",
+        "      <td> 0.034785</td>\n",
+        "      <td> 0.035425</td>\n",
+        "      <td> 0.000641</td>\n",
+        "      <td> 0.000008</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "      $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
+        "LVBP   0.034785  0.035425    0.000641    0.000008"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -141,7 +245,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 5
     }
    ],
    "metadata": {}
