--- a/tutorial/Tutorial4.ipynb
+++ b/tutorial/Tutorial4.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Tutorial 4.  Input and Output"
+  "name": "Tutorial4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,6 +43,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Saving to HDF5\n",
+      "--------------\n",
+      "\n",
       "The following code builds a model, just like before.  However, we now pass a filename argument when we begin the MCMC sampling.  This tells PyMC to save the results to disk as an HDF5 database.  This is useful for situations where the entire MCMC trace cannot fit in system memory.  "
      ]
     },
@@ -69,6 +72,9 @@
       "* `measurements`\n",
       "* `uncertainties`\n",
       "* The MCMC trace\n",
+      "\n",
+      "Loading from HDF5\n",
+      "-----------------\n",
       "\n",
       "To load an HDF5 file from disk, use the load() function:"
      ]
