--- a/tutorial/Tutorial3.ipynb
+++ b/tutorial/Tutorial3.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Tutorial 3.  Cross-Validation"
+  "name": "Tutorial3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,12 +45,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Define \"Blocks\" of Data\n",
+      "-----------------------\n",
+      "\n",
       "fit_ensemble provides a helper function (`cross_validated_mcmc`) to assist with cross validation.  However, the user must still provide a list of indices that divide the dataset into disjoint sets for cross-validation.  For a single MD trajectory, the simplest way to do so is by splitting the trajectory into its first and second halves.  The following code does just that:"
      ]
     },
@@ -63,12 +67,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Grid Search\n",
+      "-----------\n",
+      "\n",
       "We're ready to do the cross-validation.  We will use a grid search, where we build models using multiple values of `regularization_strength`.  When the calculations have finished, the results will be displayed in tabular form.  "
      ]
     },
@@ -81,19 +89,58 @@
       "for k, regularization_strength in enumerate(regularization_strength_list):\n",
       "    train_chi, test_chi = lvbp.cross_validated_mcmc(predictions, measurements, uncertainties, regularization_strength, bootstrap_index_list, num_samples=num_samples, thin=thin)\n",
       "    all_test_chi[k] = test_chi.mean()\n",
-      "pandas.DataFrame([all_test_chi], columns=regularization_strength_list, index=\"$\\chi^2$\")"
+      "pandas.DataFrame([all_test_chi], columns=regularization_strength_list, index=[\"$\\chi^2$\"])"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " \r",
+        "[****************100%******************]  25000 of 25000 complete"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 5.0 0.512956169856 0.518365683993\n"
+       ]
+      },
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>1.0</th>\n",
+        "      <th>3.0</th>\n",
+        "      <th>5.0</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>$\\chi^2$</th>\n",
+        "      <td> 0.508468</td>\n",
+        "      <td> 0.477973</td>\n",
+        "      <td> 0.518366</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "                 1         3         5\n",
+        "$\\chi^2$  0.508468  0.477973  0.518366"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -108,14 +155,6 @@
       "\n",
       "* Beauchamp, K. A., Das, R. , and Pande, V. S.  Inferring Conformational Ensembles from Noisy Experiments.  In Prep."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
