Changed fit_ensemble to FitEnsemble

--- a/tutorial/Tutorial3.ipynb
+++ b/tutorial/Tutorial3.ipynb
@@ -34,7 +34,7 @@
       "import numpy as np\n",
       "import pandas\n",
       "import matplotlib.pyplot as plt\n",
-      "from fit_ensemble import lvbp, example_loader\n",
+      "from fitensemble import lvbp, example_loader\n",
       "\n",
       "measurements, predictions, uncertainties = example_loader.load_alanine()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
@@ -55,7 +55,7 @@
       "Define \"Blocks\" of Data\n",
       "-----------------------\n",
       "\n",
-      "fit_ensemble provides a helper function (`cross_validated_mcmc`) to assist with cross validation.  However, the user must still provide a list of indices that divide the dataset into disjoint sets for cross-validation.  For a single MD trajectory, the simplest way to do so is by splitting the trajectory into its first and second halves.  The following code does just that:"
+      "fitensemble provides a helper function (`cross_validated_mcmc`) to assist with cross validation.  However, the user must still provide a list of indices that divide the dataset into disjoint sets for cross-validation.  For a single MD trajectory, the simplest way to do so is by splitting the trajectory into its first and second halves.  The following code does just that:"
      ]
     },
     {
