--- a/tutorial/Tutorial4.ipynb
+++ b/tutorial/Tutorial4.ipynb
@@ -24,7 +24,7 @@
      "input": [
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
-      "from fit_ensemble import lvbp, example_loader\n",
+      "from fitensemble import lvbp, example_loader\n",
       "\n",
       "measurements, predictions, uncertainties = example_loader.load_alanine()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
