--- a/tutorial/Tutorial2.ipynb
+++ b/tutorial/Tutorial2.ipynb
@@ -29,7 +29,7 @@
       "import numpy as np\n",
       "import pandas\n",
       "import matplotlib.pyplot as plt\n",
-      "from fit_ensemble import lvbp, example_loader\n",
+      "from fitensemble import lvbp, example_loader\n",
       "\n",
       "measurements, predictions, uncertainties = example_loader.load_alanine()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
