Stopped calling posterior average populations the MAP pops.

--- a/tutorial/Tutorial1.ipynb
+++ b/tutorial/Tutorial1.ipynb
@@ -257,7 +257,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The key outputs of an LVBP calculation are the maximum a posteriori populations.  These are essentially the *most likely* conformational populations for each conformation in your prior ensemble.  The `accumulate_populations()` member function calculates these populations for you:"
+      "The key outputs of an LVBP calculation are the posterior-averaged conformational populations.  The `accumulate_populations()` member function calculates these populations for you:"
      ]
     },
     {
