--- a/tutorial/Tutorial2.ipynb
+++ b/tutorial/Tutorial2.ipynb
@@ -148,10 +148,10 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>LVBP</th>\n",
-        "      <td> 0.563336</td>\n",
-        "      <td> 0.382900</td>\n",
-        "      <td> 0.051017</td>\n",
-        "      <td> 0.002747</td>\n",
+        "      <td> 0.562756</td>\n",
+        "      <td> 0.383495</td>\n",
+        "      <td> 0.051001</td>\n",
+        "      <td> 0.002748</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -162,7 +162,7 @@
        "text": [
         "          $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
         "Raw (MD)   0.438570  0.509385    0.049371    0.002673\n",
-        "LVBP       0.563336  0.382900    0.051017    0.002747"
+        "LVBP       0.562756  0.383495    0.051001    0.002748"
        ]
       }
      ],
@@ -204,10 +204,10 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>LVBP</th>\n",
-        "      <td> 0.034785</td>\n",
-        "      <td> 0.035425</td>\n",
-        "      <td> 0.000641</td>\n",
-        "      <td> 0.000008</td>\n",
+        "      <td> 0.033239</td>\n",
+        "      <td> 0.033849</td>\n",
+        "      <td> 0.00061</td>\n",
+        "      <td> 0.000007</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -217,7 +217,7 @@
        "prompt_number": 5,
        "text": [
         "      $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
-        "LVBP   0.034785  0.035425    0.000641    0.000008"
+        "LVBP   0.033239  0.033849     0.00061    0.000007"
        ]
       }
      ],
@@ -227,6 +227,68 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "A Better way to Evaluate Model Quality\n",
+      "======================================\n",
+      "\n",
+      "In the first tutorial, we evaluated model quality using the reduced $\\chi^2$.  To calculate the reduced $\\chi^2$, we first calculated the posterior average populations.  Now that we know how to use our MCMC samples, however, we should estimate the model quality using a more \"Bayesian\" approach.  To do so, we are going to iterate over the MCMC samples of conformational populations to calculate the reduced $\\chi^2$ for every MCMC sample.  "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "chi2 = []\n",
+      "for pi in lvbp_model.iterate_populations():\n",
+      "    mu = predictions.T.dot(pi)\n",
+      "    chi2.append((((mu - measurements) / uncertainties)**2).mean(0))\n",
+      "\n",
+      "chi2_MCMC = np.mean(chi2)\n",
+      "p = lvbp_model.accumulate_populations()\n",
+      "mu = predictions.T.dot(p)\n",
+      "chi2_AVE = (((mu - measurements) / uncertainties)**2).mean(0)\n",
+      "\n",
+      "pandas.DataFrame([[chi2_MCMC, chi2_AVE]],columns=[\"MCMC Sampled\", \"Posterior Average Populations\"],index=[\"Reduced $\\chi^2$\"])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>MCMC Sampled</th>\n",
+        "      <th>Posterior Average Populations</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Reduced $\\chi^2$</th>\n",
+        "      <td> 0.46832</td>\n",
+        "      <td> 0.001774</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "                  MCMC Sampled  Posterior Average Populations\n",
+        "Reduced $\\chi^2$       0.46832                       0.001774"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Notice that the MCMC sampled reduced $\\chi^2$ is approximately equal to one, while the posterior average result is approximately equal to zero.  A value of reduced $\\chi^2$ near zero suggests an overfit model.  Our model, however, is not overfit; we just need to calculate the reduced $\\chi^2$ in a \"Bayesian\" way.  \n",
+      "\n",
       "You've finished this tutorial.  In your own research, you can use a similar approach to characterize quantities like RMSD, radius of gyration, distances between atoms, side chain torsions, etc.  \n",
       "\n",
       "Continue on to the third tutorial [here].  \n",
